Made Configuration able to load python classes, also added ClassNotFoundException so as to avoid terminating the entire program or server if a database failed to load.
git-svn-id: https://gamescrafters.svn.sourceforge.net/svnroot/gamescrafters/GamesmanJava@4210 a668be5d-ef11-cb4c-8bfd-e08cbb24f2ba